-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.3, 5.13.1, 5.14.0 Beta2
-
None
-
-
962b9be7992cef672cb6307af5653c97382c334f (qt/qtwayland/5.13) 8676fb35b3efed69d39d17070e78bc93055939ee (qt/qtwayland/5.12)
There are two crashes affecting dolphin and gwenview kde apps :
- Dolphin : https://bugs.kde.org/show_bug.cgi?id=411596
- Gwenview: [ https://bugs.kde.org/show_bug.cgi?id=412809|https://bugs.kde.org/show_bug.cgi?id=412809]
They look similar to each other and to QTBUG-61947.
– Backtrace (Reduced):
#7 0x00007fa85f9023eb in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#8 0x00007fa85f8e1899 in __GI_abort () at abort.c:79
#9 0x00007fa85fac92c5 in wl_abort (fmt=fmt@entry=0x7fa85faca0d8 "Error marshalling request: %s\n") at ../src/wayland-util.c:417
#10 0x00007fa85fac526d in wl_proxy_marshal_array_constructor_versioned (proxy=proxy@entry=0x55b3a8c2f030, opcode=opcode@entry=1, args=args@entry=0x7fff033aad90, interface=interface@entry=0x7fa85facdb00 <wl_subsurface_interface>, version=1) at ../src/wayland-client.c:744
#11 0x00007fa85fac529d in wl_proxy_marshal_array_constructor (proxy=proxy@entry=0x55b3a8c2f030, opcode=opcode@entry=1, args=args@entry=0x7fff033aad90, interface=interface@entry=0x7fa85facdb00 <wl_subsurface_interface>) at ../src/wayland-client.c:690
To reproduce with dolphin :
- Hover over a video file and previewing it in the information panel (right)
- Hovering over a non-video file.
- Hovering on a video file.
- Crash occurs.
I will be able to test the fix.
For Gerrit Dashboard: QTBUG-79674 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
279925,3 | Client: Fix crash when showing a child window with a hidden parent | 5.13 | qt/qtwayland | Status: MERGED | +2 | 0 |
279926,3 | Add client test for subsurface with hidden parent | 5.13 | qt/qtwayland | Status: MERGED | +2 | 0 |
280263,2 | Client: Fix crash when showing a child window with a hidden parent | 5.12 | qt/qtwayland | Status: MERGED | -1 | 0 |