src/client/qwaylanddisplay.cpp
@@ -109,6 +109,10 @@ struct ::wl_region *QWaylandDisplay::createRegion(const QRegion &qregion)
         return nullptr;
     }
 
+    // Make sure we don't pass NULL surfaces to libwayland (crashes)
+    Q_ASSERT(parent->object());
+    Q_ASSERT(window->object());
+
     return mSubCompositor->get_subsurface(window->object(), parent->object());
 }
 
